Написано логирование чтения/записи в кеш, засекается время доступа к данным, создана переменная максимального размера кеша